[package]
name = "xiaoguai-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP client + per-tenant supervisor."

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
xiaoguai-storage = { path = "../xiaoguai-storage" }
rmcp = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# v0.9.0: HTTP transport uses `http::HeaderName/HeaderValue` for custom
# request headers. Pin to rmcp's version range.
http = "1"
# v1.3.3-prep: github_pr server — signature verification + REST client.
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
# Tier-3 T4 (OAuth 2.1 PKCE): code_verifier + challenge + state generation,
# base64url-no-pad encoding, time-window math, async traits, atomic token store.
rand = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# Tier-3 T4 e2e: mock OAuth token endpoint (already a workspace dep).
mockito = { workspace = true }
# v0.9.0: in-process MCP server for the HTTP transport integration test.
# Server features only enabled for `cargo test`; production binary stays
# slim.
rmcp = { workspace = true, features = ["server", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
axum = { workspace = true }
tower = { workspace = true }
tokio-util = { workspace = true }
# v0.9.4.1: reload_from_db integration test builds McpServer fixtures.
chrono = { workspace = true }

[[bin]]
name = "mock-mcp-server"
path = "tests/fixtures/mock_mcp_server.rs"
test = false
bench = false
doc = false

[lints]
workspace = true
