[package]
name = "xiaoguai-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Long-term memory with semantic retrieval — pgvector HNSW + in-memory deterministic backend."
# Requires pgvector extension to be installed in Postgres:
#   CREATE EXTENSION IF NOT EXISTS vector;
# Migration 0019_memories.sql creates the tables; run `db::migrate` as usual.

[features]
default = ["pg"]
# pg: full PgMemoryStore + pgvector HNSW similarity (requires pgvector extension).
pg = ["sqlx"]
# openai: OpenAIEmbedder via async-openai.
openai = ["async-openai"]
# local: ONNX-based local embedder (future; trait stub only).
local = []
# ollama: OllamaEmbedder — calls a local Ollama server (no API key required).
# Suitable for air-gapped environments. Default model: all-minilm (384 dims).
ollama = ["dep:reqwest"]

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }

async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
tokio        = { workspace = true }
parking_lot  = { workspace = true }

# pg feature: enables the sqlx (embedded SQLite) memory store.
sqlx = { workspace = true, optional = true }

# openai feature: embedding via OpenAI API.
async-openai = { workspace = true, optional = true }

# ollama feature: HTTP client for the local Ollama embedding API.
reqwest = { workspace = true, optional = true }

[dev-dependencies]
xiaoguai-storage = { path = "../xiaoguai-storage" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
mockito = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
