[package]
name = "xiaoguai-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Prometheus metrics + OTLP trace export for the Xiaoguai stack."

[features]
default = []
# Enable to activate both Prometheus + OTLP layers.
# xiaoguai-core gates its wiring behind the "observability" feature.
full = []

[dependencies]
# Prometheus (workspace)
prometheus = { workspace = true }

# OpenTelemetry (workspace)
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }

# axum integration
axum = { workspace = true }

# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# async
tokio = { workspace = true }

# misc
once_cell = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# In-memory OTLP exporter for span assertions
opentelemetry_sdk = { workspace = true, features = ["testing"] }
# Parse Prometheus text format in tests
prometheus-parse = "0.2"
# HTTP test client for /metrics endpoint
tower = { workspace = true }
http-body-util = "0.1"
bytes = { workspace = true }

[lints]
workspace = true
