[package]
name = "xiaoguai-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Xiaoguai supervisor orchestrator — plan decomposition, worker dispatch, budget enforcement."

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
# v1.6+ triangle pattern (DEC-021, sprint-9 S9-1):
uuid = { workspace = true }
parking_lot = { workspace = true }
# Sprint-9 S9-2 (PlannerAgent) + S9-3 (WorkerAgent) deps:
xiaoguai-agent = { path = "../xiaoguai-agent" }
xiaoguai-llm = { path = "../xiaoguai-llm" }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# HR Onboarding pack integration tests.
# The test file lives in packs/hr-onboarding/tests/ alongside the YAML
# definitions it exercises.  A [[test]] stanza is used so the test is only
# compiled / run when explicitly requested (or via --workspace), keeping the
# orchestrator crate's own fast unit-test cycle clean.
[[test]]
name = "hr_onboarding_tests"
path = "../../packs/hr-onboarding/tests/hr_onboarding_tests.rs"

[lints]
workspace = true
